--- a/content/about.html
+++ b/content/about.html
@@ -310,18 +310,14 @@ $(document).ready(function () {
 </div>
 
 
-<blockquote>
-<p>In God we trust, all others bring data.</p>
-</blockquote>
-<div id="right">
-<blockquote>
-<p>– William Edwards Deming (1900-1993)</p>
-</blockquote>
-</div>
 <p>I am <strong>Xinlu (Sean) Wang</strong> , an Associate Professor specialized in Research on corporate accounting and finance, currently working at SWUFE.<br />
 I love to manipulate and visualize data using R and Python.<br />
 I believe in open source.</p>
 <p><strong>Email:</strong> <a href="mailto:xinlu.wang@outlook.com">xinlu.wang@outlook.com</a></p>
+<p><em>In God we trust, all others bring data.</em></p>
+<div id="right">
+<p>– William Edwards Deming (1900-1993)</p>
+</div>
 
 
 
