--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,11 @@
 <ul>
   
   <li>
+    <span class="date">2018/10/12</span>
+    <a href="/20181012/clustering-algorithms/">Clustering Algorithms</a>
+  </li>
+  
+  <li>
     <span class="date">2018/10/01</span>
     <a href="/20181001/revolutionary-road/">Revolutionary Road 观后感</a>
   </li>
