--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,11 @@
 <ul>
   
   <li>
+    <span class="date">2019/01/01</span>
+    <a href="/20190101/embeddings-categorical-input-data/">Embeddings: Categorical Input Data</a>
+  </li>
+  
+  <li>
     <span class="date">2018/10/20</span>
     <a href="/20181020/why-you-will-marry-the-wrong-person-ny-times/">Why You Will Marry the Wrong Person [NY Times]</a>
   </li>
