--- a/public/20190101/embeddings-categorical-input-data/index.html
+++ b/public/20190101/embeddings-categorical-input-data/index.html
@@ -123,11 +123,9 @@
 
 <p><img src="/post/2019-01-01-embeddings-categorical-input-data_files/Jietu20190101-162648.png" alt="" /></p>
 
-<h2 id="the-thumb-up-of-choosing-dimensions">the thumb up of choosing dimensions</h2>
+<h2 id="rule-of-thumb-for-choosing-dimensions">Rule of Thumb for Choosing Dimensions</h2>
 
-<blockquote>
-<p><img src="/post/2019-01-01-embeddings-categorical-input-data_files/Jietu20190101-162108@2x.png" alt="" width="90%"/></p>
-</blockquote>
+<p><img src="/post/2019-01-01-embeddings-categorical-input-data_files/Jietu20190101-162108@2x.png" alt="" width="120%"/></p>
 
 
   <footer>
