--- a/public/about/index.html
+++ b/public/about/index.html
@@ -108,6 +108,8 @@
 
 
 
+<p><img src="./images/logo.jpg" alt="" /></p>
+
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <em>In God we trust, all others bring data.</em></p>
 
