--- a/public/20160606/reproducible-research/index.html
+++ b/public/20160606/reproducible-research/index.html
@@ -210,6 +210,7 @@ into smaller functions</p></li>
 
 
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/r.min.js"></script>
+<script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/python.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/yaml.min.js"></script>
 <script>hljs.configure({languages: []}); hljs.initHighlightingOnLoad();</script>
 
