--- a/public/20160619/several-public-data-sources/index.html
+++ b/public/20160619/several-public-data-sources/index.html
@@ -244,6 +244,7 @@ as mortality and life expectancy</p>
 
 
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/r.min.js"></script>
+<script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/python.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/yaml.min.js"></script>
 <script>hljs.configure({languages: []}); hljs.initHighlightingOnLoad();</script>
 
