--- a/public/20171122/用r进行数据格式转换sas-stata/index.html
+++ b/public/20171122/用r进行数据格式转换sas-stata/index.html
@@ -236,6 +236,7 @@ write_sas(dataset, &quot;C:/example.sas7bdat&quot;)  # 把它导出为SAS格式
 
 
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/r.min.js"></script>
+<script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/python.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/yaml.min.js"></script>
 <script>hljs.configure({languages: []}); hljs.initHighlightingOnLoad();</script>
 
