--- a/public/20180716/ocr-for-english-and-chinese/index.html
+++ b/public/20180716/ocr-for-english-and-chinese/index.html
@@ -194,6 +194,7 @@ cleanFile(&quot;page.jpg&quot;, &quot;page_clean.png&quot;)
 
 
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/r.min.js"></script>
+<script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/python.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/yaml.min.js"></script>
 <script>hljs.configure({languages: []}); hljs.initHighlightingOnLoad();</script>
 
