--- a/public/20151227/linear-regression-and-group-by-in-r/index.html
+++ b/public/20151227/linear-regression-and-group-by-in-r/index.html
@@ -228,6 +228,7 @@ l_ply(models, summary, .print = TRUE)
 
 
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/r.min.js"></script>
+<script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/python.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.11.0/languages/yaml.min.js"></script>
 <script>hljs.configure({languages: []}); hljs.initHighlightingOnLoad();</script>
 
