--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -83,11 +83,11 @@ Slides
   <ul>
   
   
+  <li><a href="/research/"> Research</a></li>
+  
+  <li class="active"><a href="/teaching/"> Teaching</a></li>
+  
   <li><a href="/about/">About</a></li>
-  
-  <li><a href="/research/">Research</a></li>
-  
-  <li class="active"><a href="/teaching/">Teaching</a></li>
   
   
   </ul>
@@ -113,9 +113,9 @@ Slides
 
 <h3 id="1-textual-analysis-using-python">1. Textual Analysis using Python</h3>
 
-<p><a href="./teaching/text-python/00-read-file.ipynb"><strong>Code</strong></a></p>
+<p><a href="/./teaching/text-python/00-read-file.ipynb"><em>Code</em></a></p>
 
-<p><a href="./teaching/text-python/Text Analysis in Accounting Research.pdf"><strong>Slides</strong></a></p>
+<p><a href="/./teaching/text-python/Text Analysis in Accounting Research.pdf"><em>Slides</em></a></p>
 
 
   <footer>
