--- a/public/research/index.html
+++ b/public/research/index.html
@@ -102,7 +102,7 @@
 
 
 
-<p><img src="/./Research/sic2-wordcloud.pdf" alt="*pdf*" /></p>
+<p><img src="/./Research/jietu.png" alt="Word Cloud of Risk Factors" /></p>
 
 
   <footer>
