--- a/public/about/index.html
+++ b/public/about/index.html
@@ -125,8 +125,7 @@
 <p><br></p>
 
 <p>I am <strong>Xinlu (Sean) Wang</strong> , an Associate Professor specialized in Research on corporate accounting and finance, currently working at SWUFE.<br />
-I love to manipulate and visualize data using R and Python.<br />
-I believe in open source.</p>
+I love to manipulate and visualize data using R and Python.</p>
 
 <p><strong>Email:</strong> xinlu.wang@outlook.com</p>
 
