--- a/public/about/index.html
+++ b/public/about/index.html
@@ -124,8 +124,8 @@
 
 <p><br></p>
 
-<p>I am <strong>Xinlu (Sean) Wang</strong> , an Associate Professor specialized in Research on corporate accounting and finance, currently working at SWUFE.<br />
-I love to manipulate and visualize data using R and Python.</p>
+<p>I am <strong>Xinlu (Sean) Wang</strong> , an Associate Professor specialized in Research on corporate accounting and finance, currently working at <strong>Jinan University</strong>.<br />
+I love to manipulate and visualize data using Python and R.</p>
 
 <p><strong>Email:</strong> xinlu.wang@outlook.com</p>
 
